--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+replays/
